# Distive

./: .env  .gitignore  .history  404.html  CHANGELOG.json  CNAME  Cargo.toml  LICENSE  README.md  STEPS_TO_UPGRADE_VERSION.md  build.sh  build_chat_canister.sh  canister_ids.json  config.toml  deploy.sh  dfx.json  generate_mock_data.sh  index.html  install_deps.sh  package.json  pnpm-lock.yaml  robots.txt  start-dev.sh  start_dev.sh  start_dev_ledger.sh  start_test.sh
changelog/: index.html
docs/: Installation.md  faq.md  index.md  retype.yml
docs/Integrations/: index.md  react.md  sdk.md
docs/integrations/: react.md  sdk.md
faq/: index.html
installation/: index.html
integration/: tests.sh  wasm_checksum.sh
integration/cycles_payment/: user_can_add_cycles_to_chat_canister.sh
integrations/: index.html
integrations/react/: index.html
integrations/sdk/: index.html
resources/js/: config.js  lunr.js  prism.js  search.json
roadmap/: index.html
src/chat_canister/: Cargo.toml  chat_canister.did  chat_canister.old.did  lib.rs
src/chat_canister/libs/: mod.rs
src/chat_canister/libs/scaling/: lib.rs  mod.rs
src/chat_canister/operations/: mod.rs  queries.rs  updates.rs
src/chat_canister/shared/: constants.rs  functions.rs  mod.rs  types.rs
src/chat_canister/tests/: test_comment_metadata.sh
src/chat_engine/: Cargo.toml
src/deployer/: Cargo.toml
src/distributed_chat_engine/: Cargo.toml
src/integration/: Cargo.toml  export.csv  export_test.csv  export_test_2.csv  test.sh  test_authenticated_upserts.sh  test_get_create_thread.sh  test_import_export.rs  test_unauthenticated_upserts.sh
src/integration/tests/: imports_exports.rs
src/integration/tests/common/: mod.rs
src/treasury_canister/: Cargo.toml  chat_canister.wasm  lib.rs  treasury_canister.did
(+70 files in other folders)
