[package]
name = "chat_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
chat_engine = { path = "../chat_engine" }
serde = "1.0"
mopa = "0.2.2"
cucumber = "0.13.0"
ic-agent = "0.15.0"
ic-utils = "0.15.0"
garcon = "0.2.3"